--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "noUncheckedIndexedAccess": true,
     "allowJs": true,
     "types": [
       "bun-types" // add Bun global
